fix gap

--- a/src/modules/menu/components/mainMenu/mainMenu.css
+++ b/src/modules/menu/components/mainMenu/mainMenu.css
@@ -5,7 +5,9 @@
 	bottom: 0;
 	top: 0;
 	left: -28em;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+	box-shadow:
+		-5px 0px 0px rgba(255, 255, 255, 1),
+		0px 2px 4px rgba(0, 0, 0, 0.5);
 	overflow: visible;
 	transition-property: transform;
 	transition-duration: var(--animation-duration-large-open);
